# ChangeLog for perl-core/DB_File
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/DB_File/ChangeLog,v 1.26 2008/12/08 03:31:46 robbat2 Exp $

*DB_File-1.817 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +DB_File-1.817.ebuild:
  Version bump.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> DB_File-1.815.ebuild:
  Stable for HPPA too.

  12 Aug 2007; Tom Gall <tgall@gentoo.org> DB_File-1.815.ebuild:
  stable on ppc64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> DB_File-1.815.ebuild:
  alpha/ia64/x86 stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org> DB_File-1.815.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  DB_File-1.815.ebuild:
  ppc stable

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> DB_File-1.815.ebuild:
  Stable on sparc

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org> DB_File-1.815.ebuild:
  Marking stable amd64

  08 Feb 2007; Michael Cummings <mcummings@gentoo.org> DB_File-1.815.ebuild:
  Bug 165785, removed mydoc line

*DB_File-1.815 (06 Feb 2007)

  06 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +DB_File-1.815.ebuild:
  Version bump

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -DB_File-1.811.ebuild, -DB_File-1.811-r1.ebuild, DB_File-1.813.ebuild,
  DB_File-1.814.ebuild:
  Marking amd64, sparc stable; cleaning up old ebuilds

  03 Aug 2006; Michael Cummings <mcummings@gentoo.org> DB_File-1.811.ebuild,
  DB_File-1.811-r1.ebuild, DB_File-1.813.ebuild, DB_File-1.814.ebuild:
  Added perl dep

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> DB_File-1.811.ebuild,
  DB_File-1.811-r1.ebuild, DB_File-1.813.ebuild, DB_File-1.814.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

  25 Feb 2006; Joshua Kinard <kumba@gentoo.org> DB_File-1.814.ebuild:
  Marked stable on mips.

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> DB_File-1.814.ebuild:
  stable on amd64
