@@ -1,12 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX DB_File-MakeMaker.patch 569 RMD160 1ea33c5f175bf68c28c1160f099a928fc9f41f0f SHA1 89a49bda5097846963a9b0e7d000563c4c50a2df SHA256 18cded4203979efa4257fcd097459810654712a9bac24cbc05e82f558915b21f
 AUX config.in 3121 RMD160 03f5b122c59f70e3292e492b6d53d1c374500d44 SHA1 56f6e1885309cce0f6c81245821e21f1a1c2a17b SHA256 5f92777326db4afd3bd8241987d72e54150ff0d49a62a780c8db950f0f504cd5
 DIST DB_File-1.813.tar.gz 87047 RMD160 d550e28a35d19dc58821d7fc8a9ad9d3aac77419 SHA1 d4935f2d8a1fded3c99da9850b05f0cd61804698 SHA256 c9ead3d8dee2eeafd34076206c3c89f8a143fd6d52a2863d41839cada51a628a
 DIST DB_File-1.814.tar.gz 87227 RMD160 544a968b5e4cd1d1249012d3894ff1d5bc2515a5 SHA1 8713b4986b38526d5534a3dfd3110da27febf0f8 SHA256 a25a69de6460c534e3c36b30f367bb188f19ae5242da01d60ce804158612011e
 DIST DB_File-1.815.tar.gz 87656 RMD160 d08a874fcb9f24276d02662ca722d48f10b9e431 SHA1 be02dbd60d997cc804ef594cda982fe77dd62928 SHA256 7779c98b12970561067a053567dc70dafae6b8a6005e31ef795c491b9e63ece9
 DIST DB_File-1.817.tar.gz 87996 RMD160 268f560af33d3aac9d8a54b28383f2566365e1b3 SHA1 009187ed32c50dd53d09f4fc0352226369b49f66 SHA256 b9e19a22603b7856d2428c59a134d87bb62d29595c1f62a8da49ca85892aa6ba
+DIST DB_File-1.818.tar.gz 88228 RMD160 c221dc5bfc1064275ba695f641f90a4a02ae193a SHA1 6d643bbc3c3df9707b62a3f0d3983502501a6431 SHA256 47643de425145bb0eed342f68398c7eadec765c416866e2ca49126631a562508
 EBUILD DB_File-1.813.ebuild 835 RMD160 e9b0628bb42c3cc2e28e3249c63746c727e0a212 SHA1 20ac05af117261b23816a4aec145964fac5481e7 SHA256 b7ebf4662bfebe91cffb3deeaa395120c37b7b04a4a4e71a7af9cbdd0456c131
 EBUILD DB_File-1.814.ebuild 832 RMD160 3295099f0dc7afcf3ff24d11b93c7d685e3d775c SHA1 fe043fbcfc937e855fed7d3cf75a199c5179677f SHA256 c26fd06ab74d68970a71acec79e23d861fdf276a79d062804175ad05c491c3ed
 EBUILD DB_File-1.815.ebuild 809 RMD160 c70f22be65a2ed21444dbdd0a22d5de692c1c7dd SHA1 97184bd85dbedcf3b5f96f5618cfbeb43daa670b SHA256 dec3765cb392a432cd4735eee081488c96c432364c68bfc926e091ca5a976bd6
 EBUILD DB_File-1.817.ebuild 825 RMD160 23bc9825e2535654b845c58da43a94e22e74f3c5 SHA1 ff475a7df6137d9a1f8de1ccef5706890c68f8f1 SHA256 b4f85f668b6c579d7698fb75d263dd0a2e8c0158c54da000a0b112f8b325b443
-MISC ChangeLog 7431 RMD160 af6b22eadf633ca3600398c767b08b4e320d2c42 SHA1 67992834497a279883e4a71d18bf24ef81d38774 SHA256 b398c91e1956b3a67bdde6fa7a9cadea8673266113db3b98252171310813c3f0
+EBUILD DB_File-1.818.ebuild 714 RMD160 c858dcc3df8bca51ace501766cf091ff952c9541 SHA1 75b0bc09469c59ab401b92b4998f8c97dc9464d3 SHA256 1094c4f26d8c2b2f54ceeed2dbc65b46f3021ba7af09f713bebe54e23f007505
+MISC ChangeLog 7545 RMD160 92354b1f8cc52a72d0c94bd96966b9055765d181 SHA1 2d38c25dddde375040d4848f2b7851b22d044170 SHA256 b473ac87e94719d9a06cb33b874785a0b0a0cf86fd3dc5334f9d47252d779032
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkmFtRsACgkQV3J2n04EauxIhACfZgEfdwel/ezMsP/1QDGnOigk
+63oAoNh28CbVmEUrUZQ3sT5pfp4Z/iBS
+=wr2V
+-----END PGP SIGNATURE-----
