@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/DB_File
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/DB_File/ChangeLog,v 1.26 2008/12/08 03:31:46 robbat2 Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/DB_File/ChangeLog,v 1.27 2009/02/01 14:44:08 tove Exp $
+
+*DB_File-1.818 (01 Feb 2009)
+
+  01 Feb 2009; Torsten Veller <tove@gentoo.org> +DB_File-1.818.ebuild:
+  Version bump
 
 *DB_File-1.817 (08 Dec 2008)
 
